syntax = "proto3";
package proto;
option go_package = "./";

message GetRequest {
    string name = 1;
    bytes payload = 2;
}

message PutRequest {
    string name = 1;
    bytes payload = 2;
}

message GetResponse {
    bytes response = 1;
}

message Empty {}

service Model {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (Empty);
}